test/sema/negative/struct09.out
struct09.impala:5 col 21 - 35: error: mismatched types: expected 'T[bool]' but found 'S[i32]' as initialization type
